<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="163dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="106dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textColorHighlight="#3F74B5"
        android:textColorLink="#3F74B5"
        android:textSize="20sp"
        android:background="@drawable/background"
        android:backgroundTint="#2F3F74B5"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:paddingLeft="10dp"
        android:drawablePadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editcontra"
        android:layout_width="237dp"
        android:layout_height="46dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="101dp"
        android:background="@drawable/background"
        android:backgroundTint="#2F3F74B5"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorLink="#3F74B5"
        android:drawablePadding="10dp"
        android:textSize="20sp"
        android:textAlignment="viewStart"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btregistro"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="#3F74B5"
        android:text="@string/registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btlogin" />

    <Button
        android:id="@+id/btlogin"
        android:layout_width="167dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="#3F74B5"
        android:onClick="Login"
        android:text="@string/inicia_sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editcontra"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/textlogin"
        android:layout_width="294dp"
        android:layout_height="39dp"
        android:layout_marginTop="19dp"
        android:gravity="center"
        android:text="@string/quiere_iniciar_cuenta_desde_la_cuenta_de_otro_movil_pulse_aqui"
        android:textColor="#3F74B5"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btregistro"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>